V4: Fix multiplication

Ensure that negative number times positive zero yields negative zero,
not positive zero.
Do the same adjustment in QJSPrimitiveValue

Fixes: QTBUG-104582
Change-Id: I8231bfb051b7d902e5e50bbd282410a572b1628a
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>
(cherry picked from commit f59af767aedaa30c1b0593f2b3c36cbfce65bd3e)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>